syntax = "proto3";

package echo;

option go_package = "github.com/lapwingcloud/echoserver/proto";

message PingMessage {
  int64 delayNanos = 1;
  string payload = 2;
}

message PongMessage {
  string timestamp = 1;
  string hostname = 2;
  string version = 3;
  string remoteIp = 4;
  int32 remotePort = 5;
  // reserve a field for real client ip
  // string clientIp = 6;
  string requestId = 7;
  string authority = 8;
  string requestMethod = 9;
  double requestTime = 10;
  string userAgent = 11;

  int64 delayNanos = 21;
  string payload = 22;
}

service Echo {
  rpc Ping (PingMessage) returns (PongMessage) {}
}
